--- a/index.html
+++ b/index.html
@@ -11,32 +11,97 @@
 </head>
 
 <body class="container-fluide">
-    <header>
-        <div class="header_logo">
-            <div>
-                <img src="img/logo.png" alt="CHARGER" title="CHARGER">
-                <div class="logo_name_1">CHARGER</div>
-                <div class="logo_name_2">customs</div>
+    <div class="header">
+        <header>
+            <div class="header_logo">
+                <div>
+                    <img src="img/logo.png" alt="CHARGER" title="CHARGER">
+                    <div class="logo_name_1">CHARGER</div>
+                    <div class="logo_name_2">customs</div>
+                </div>
             </div>
+            <nav>
+                <div class="topnav" id="myTopnav">
+                    <a href="#">ABOUT US</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">PROJECTS</a>
+                    <a href="#" id="menu" class="icon">
+                        <div class="container">
+                            <div class="row menu_icon_wrapper">
+                                <div class="col menu_icon"></div>
+                                <div class="name_menu">MENU</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </nav>
+
+        </header>
+        <div class="social d-flex align-items-end">
+            <div><a href="#">Facebook</a></div>
+            <div>/</div>
+            <div><a href="#">Twitter</a></div>
+            <div>/</div>
+            <div><a href="#">Youtube</a></div>
         </div>
-        <nav>
-            <div class="topnav" id="myTopnav">
-                <a href="#">ABOUT US</a>
-                <a href="#">SERVICES</a>
-                <a href="#">PROJECTS</a>
-                <a href="#" id="menu" class="icon">
-                    <div class="container">
-                        <div class="row menu_icon_wrapper">
-                            <div class="col menu_icon"></div>
-                            <div class="name_menu">MENU</div>
+        <div class="container-fluid">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-interval="5000">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="slogan">
+                                    <div>We're Charger</div>
+                                </div>
+                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                    automotive
+                                    industry.</p>
+                                <div>
+                                    <a href="#" class="more-info">READ MORE</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="carousel-item" data-interval="5000">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="slogan">
+                                    <div>We're the best</div>
+                                </div>
+                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                    automotive
+                                    industry.</p>
+                                <div>
+                                    <a href="#" class="more-info">READ MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-interval="5000">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="slogan">
+                                    <div>We can do everything</div>
+                                </div>
+                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                    automotive
+                                    industry.</p>
+                                <div>
+                                    <a href="#" class="more-info">READ MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="jump">PREV</span><span class="strip"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="strip"></span><span class="jump">NEXT</span>
                 </a>
             </div>
-        </nav>
-
-    </header>
-
+        </div>
+    </div>
 
 
 
