--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charger</title>
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
@@ -49,7 +50,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-interval="5000">
                         <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-4">
+                            <div class="col-sm-6 col-lg-6">
                                 <div class="slogan">
                                     <div>We're Charger</div>
                                 </div>
@@ -64,7 +65,7 @@
                     </div>
                     <div class="carousel-item" data-interval="5000">
                         <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-4">
+                            <div class="col-sm-6 col-lg-6">
                                 <div class="slogan">
                                     <div>We're the best</div>
                                 </div>
@@ -79,7 +80,7 @@
                     </div>
                     <div class="carousel-item" data-interval="5000">
                         <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-4">
+                            <div class="col-sm-6 col-lg-6">
                                 <div class="slogan">
                                     <div>We can do everything</div>
                                 </div>
@@ -102,7 +103,20 @@
             </div>
         </div>
     </div>
-
+    <div class="container main-about-us">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-6 photo-us">
+                <img src="./img/img-2.jpg" alt="we're" title="Charger castoms" class="img-fluid">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6 text-about-us">
+                <h2 class="title-about-us">About us</h2>
+                <div class="strip-about"></div>
+                <p>Charger Customs - luxury automotive restyling center based in Corona, California. There is no limit
+                    to what we can do.</p>
+                <button type="button" class="btn btn-outline-warning btn-more">MORE</button>
+            </div>
+        </div>
+    </div>
 
 
     <script src="./app/main.js"></script>
