add services files

--- a/index.html
+++ b/index.html
@@ -11,98 +11,99 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 
-<body class="container-fluide">
+<body>
     <div class="header">
-        <header>
-            <div class="header_logo">
-                <div>
-                    <img src="img/logo.png" alt="CHARGER" title="CHARGER">
-                    <div class="logo_name_1">CHARGER</div>
-                    <div class="logo_name_2">customs</div>
-                </div>
-            </div>
-            <nav>
-                <div class="topnav" id="myTopnav">
-                    <a href="#">ABOUT US</a>
-                    <a href="#">SERVICES</a>
-                    <a href="#">PROJECTS</a>
-                    <a href="#" id="menu" class="icon">
-                        <div class="container">
-                            <div class="row menu_icon_wrapper">
-                                <div class="col menu_icon"></div>
-                                <div class="name_menu">MENU</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </nav>
-
-        </header>
-        <div class="social d-flex align-items-end">
+        <div class="social d-flex justify-content-end mr-3">
             <div><a href="#">Facebook</a></div>
             <div>/</div>
             <div><a href="#">Twitter</a></div>
             <div>/</div>
             <div><a href="#">Youtube</a></div>
         </div>
-        <div class="container-fluid">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-interval="5000">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-6">
-                                <div class="slogan">
-                                    <div>We're Charger</div>
-                                </div>
-                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
-                                    automotive
-                                    industry.</p>
-                                <div>
-                                    <a href="#" class="more-info">READ MORE</a>
-                                </div>
-                            </div>
+    </div>
+    <header>
+        <div class="header_logo">
+            <div>
+                <img src="img/logo.png" alt="CHARGER" title="CHARGER">
+                <div class="logo_name_1">CHARGER</div>
+                <div class="logo_name_2">customs</div>
+            </div>
+        </div>
+        <nav>
+            <div class="topnav" id="myTopnav">
+                <a href="#">ABOUT US</a>
+                <a href="#">SERVICES</a>
+                <a href="#">PROJECTS</a>
+                <a href="#" id="menu" class="icon">
+                    <div class="container">
+                        <div class="row menu_icon_wrapper">
+                            <div class="col menu_icon"></div>
+                            <div class="name_menu">MENU</div>
                         </div>
                     </div>
-                    <div class="carousel-item" data-interval="5000">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-6">
-                                <div class="slogan">
-                                    <div>We're the best</div>
-                                </div>
-                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
-                                    automotive
-                                    industry.</p>
-                                <div>
-                                    <a href="#" class="more-info">READ MORE</a>
-                                </div>
+                </a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container-fluid">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="5000">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-sm-6 col-lg-6">
+                            <div class="slogan">
+                                <div>We're Charger</div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-interval="5000">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col-sm-6 col-lg-6">
-                                <div class="slogan">
-                                    <div>We can do everything</div>
-                                </div>
-                                <p class="a-inf">One of the most powerful and recognized brand names in the custom
-                                    automotive
-                                    industry.</p>
-                                <div>
-                                    <a href="#" class="more-info">READ MORE</a>
-                                </div>
+                            <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                automotive
+                                industry.</p>
+                            <div>
+                                <a href="#" class="more-info">READ MORE</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                    <span class="jump">PREV</span><span class="strip"></span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                    <span class="strip"></span><span class="jump">NEXT</span>
-                </a>
+                <div class="carousel-item" data-interval="5000">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-sm-6 col-lg-6">
+                            <div class="slogan">
+                                <div>We're the best</div>
+                            </div>
+                            <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                automotive
+                                industry.</p>
+                            <div>
+                                <a href="#" class="more-info">READ MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-interval="5000">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-sm-6 col-lg-6">
+                            <div class="slogan">
+                                <div>We can do everything</div>
+                            </div>
+                            <p class="a-inf">One of the most powerful and recognized brand names in the custom
+                                automotive
+                                industry.</p>
+                            <div>
+                                <a href="#" class="more-info">READ MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="jump">PREV</span><span class="strip"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="strip"></span><span class="jump">NEXT</span>
+            </a>
         </div>
     </div>
+
     <div class="container main-about-us">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-6 photo-us">
@@ -117,9 +118,73 @@
             </div>
         </div>
     </div>
-
-
+    <div class="container-fluide services">
+        <div class="row">
+            <div class="col block-serv">
+                <h2 class="title-services">Services</h2>
+                <p class="strip-serv"></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div><a href="#" class="learn-more ">LEARN MORE</a></div>
+            </div>
+        </div>
+        <div class="container service-images">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="card card-service text-white mb-3 dws">
+                        <div class="blocImg">
+                            <img src="./img/service-img-1.jpg" class="card-img" alt="Tuning" title="Tuning">
+                            <div class="card-img-overlay blocText">
+                                <div class="text">
+                                    <h5 class="card-title name-service d-flex justify-content-center">Tuning</h5>
+                                    <p>Modification of the performance or appearance of a vehicle.</p>
+                                    <div class="d-flex justify-content-center">
+                                        <a href="#" class="more-info">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="card card-service text-white mb-3 dws">
+                        <div class="blocImg">
+                            <img src="./img/service-img-2.jpg" class="card-img" alt="Restoration" title="Restoration">
+                            <div class="card-img-overlay blocText">
+                                <div class="text">
+                                    <h5 class="card-title name-service d-flex justify-content-center">Restoration</h5>
+                                    <p>We restore vintage cars using a full technological cycle.</p>
+                                    <div class="d-flex justify-content-center">
+                                        <a href="#" class="more-info">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="card card-service text-white mb-3 dws">
+                        <div class="blocImg">
+                            <img src="./img/service-img-3.jpg" class="card-img" alt="Repairs" title="Repairs">
+                            <div class="card-img-overlay blocText">
+                                <div class="text">
+                                    <h5 class="card-title name-service d-flex justify-content-center">Repairs</h5>
+                                    <p>We repair and modify cars to the level desired by the client.</p>
+                                    <div class="d-flex justify-content-center">
+                                        <a href="#" class="more-info">READ MORE</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./app/main.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
