add files projects + footer

--- a/index.html
+++ b/index.html
@@ -184,7 +184,51 @@
             </div>
         </div>
     </div>
+    <div class="container-fluide empty">
+
+    </div>
     <div class="container-fluide projects" id="projects">
+        <div class="row d-flex justify-content-center">
+            <div class="title-projects ">Projects</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-1.jpg" class="img-fluid" alt="car-1">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-2.jpg" class="img-fluid" alt="car-2">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-9.jpg" class="img-fluid" alt="car-3">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-4.jpg" class="img-fluid" alt="car-4">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-5.jpg" class="img-fluid" alt="car-5">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-6.jpg" class="img-fluid" alt="car-6">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-7.jpg" class="img-fluid" alt="car-7">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3 pt-3 pb-3">
+                <img src="./img/car-8.jpg" class="img-fluid" alt="car-8">
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <button type="button" class="btn btn-outline-warning btn-more">MORE</button>
+        </div>
+    </div>
+    <!--
+    <div class="container-fluide testimonials">
+
+    </div>
+-->
+    <div class="container-fluide charger">
 
     </div>
 
