--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
                 <button type="button" class="btn btn-outline-warning btn-more">MORE</button>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mt-5">
+            <img src="./img/repairs.png" alt="repairs">
+        </div>
+        <div class="row question d-flex justify-content-center mt-3">
+            WANT TO KNOW THE COST OF REPAIRS? FILL OUT THE FORM!
+        </div>
+        <div class="row d-flex justify-content-center mt-3">
+            <form>
+                <div class="form-row">
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <input type="text" class="form-control mb-3" placeholder="&#9997; Your name">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+                        <input type="tel" class="form-control" placeholder="&phone; Your number">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
+                        <button type="submit" class="btn btn-warning pl-5 pr-5">🚀 SEND</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="container-fluide services" id="services">
         <div class="row">
@@ -226,7 +247,6 @@
     </div>
 
     <div class="container-fluide testimonials">
-
         <div id="carouselTestimonialsCaptions" class="carousel carousel-carousel-testimonials slide"
             data-ride="carousel">
             <ol class="carousel-indicators">
@@ -269,8 +289,12 @@
             </div>
         </div>
     </div>
+    <div class="container name-letter">
+        <div class="letter">C</div>
+    </div>
 
     <div class="container charger">
+
         <div class="row d-flex justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-6 photo-us">
                 <img src="./img/last.jpg" alt="we're" title="Charger" class="img-fluid">
@@ -290,6 +314,45 @@
         </div>
         <div class="vert">
             <span>Charger</span><span>Customs</span>
+        </div>
+    </div>
+    <div class="container-fluide contacts">
+        <div class="row">
+            <div class="col d-flex justify-content-center mt-5">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.5760638901547!2d-121.48799968530125!3d38.566580173982224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzjCsDMzJzU5LjciTiAxMjHCsDI5JzA4LjkiVw!5e0!3m2!1sru!2sua!4v1602159665162!5m2!1sru!2sua"
+                    min-width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                    aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="col contacts-info justify-content-center mt-5">
+                <h2 class="info-about-1">FORGET ABOUT PROBLEMS</h2>
+                <h2 class="info-about-2">WITH AUTO</h2>
+                <h3>🌎 California, USA</h3>
+                <h3>Solons Alley, Sacramento</h3>
+                <h3><span class="inf-2">☎</span> (+1 310 8808 8808)</h3>
+                <h3><span class="inf-2">✉</span> charger@gmail.com</h3>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mt-5">
+            <img src="./img/repairs.png" alt="repairs">
+        </div>
+        <div class="row question-2 d-flex justify-content-center mt-3">
+            DO YOU HAVE ANY QUESTIONS ABOUT REPAIR?
+        </div>
+        <div class="row d-flex justify-content-center mt-3">
+            <form>
+                <div class="form-row">
+                    <div class="col-sm-12 col-md-12 col-lg-4 f-1">
+                        <input type="text" class="form-control mb-3" placeholder="&#9997; Your name">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4 mb-4 f-2">
+                        <input type="tel" class="form-control" placeholder="&phone; Your number">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4 mb-4 f-3">
+                        <button type="submit" class="btn btn-warning pl-5 pr-5">🚀 SEND</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 
