--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <input type="text" class="form-control mb-3" placeholder="&#9997; Your name">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
-                        <input type="tel" class="form-control" placeholder="&phone; Your number">
+                        <input type="tel" class="form-control phone" placeholder="&phone; Your number">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
                         <button type="submit" class="btn btn-warning pl-5 pr-5">🚀 SEND</button>
@@ -346,7 +346,7 @@
                         <input type="text" class="form-control mb-3" placeholder="&#9997; Your name">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-4 mb-4 f-2">
-                        <input type="tel" class="form-control" placeholder="&phone; Your number">
+                        <input type="tel" class="form-control phone" placeholder="&phone; Your number">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-4 mb-4 f-3">
                         <button type="submit" class="btn btn-warning pl-5 pr-5">🚀 SEND</button>
@@ -379,6 +379,13 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js"
+        type="text/javascript"></script>
+    <script>
+        $(".phone").mask("+380(99)999-99-99");
+    </script>
     <script src="./app/main.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
