--- a/index.html
+++ b/index.html
@@ -319,10 +319,9 @@
     <div class="container-fluide contacts">
         <div class="row">
             <div class="col d-flex justify-content-center mt-5">
-                <iframe
+                <iframe class="map"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.5760638901547!2d-121.48799968530125!3d38.566580173982224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzjCsDMzJzU5LjciTiAxMjHCsDI5JzA4LjkiVw!5e0!3m2!1sru!2sua!4v1602159665162!5m2!1sru!2sua"
-                    min-width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
-                    aria-hidden="false" tabindex="0"></iframe>
+                    style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
             <div class="col contacts-info justify-content-center mt-5">
                 <h2 class="info-about-1">FORGET ABOUT PROBLEMS</h2>
@@ -380,9 +379,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js"
-        type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js"></script>
     <script>
         $(".phone").mask("+380(99)999-99-99");
     </script>
